// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step component renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="uui-panel lNErC1 stepWrapper -YmdJu"
      >
        <div
          class="uui-panel lNErC1 step false offsetEnd -YmdJu"
        >
          <div
            class="uui-flex-row z4sbms _1HO2Le x8mfAd _7a2mcl"
          >
            <div
              class=""
              style="min-width: 0; flex-basis: auto;"
            >
              <div
                class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography b2hPSQ -KuFcE ACLoGo stepNumber VocdbV"
              >
                01
              </div>
              <div
                class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography b2hPSQ -KuFcE ACLoGo stepTitle VocdbV"
              >
                Tenders for art objects are opened
              </div>
            </div>
          </div>
          <div
            class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography -Y5Dym _6GiZro _6Zp8gd stepDescription VocdbV"
          >
            State officials announce open calls for street art tenders, inviting sculptors, artists, and creators to enhance the cityscape with original art installations.
          </div>
          <div
            class="uui-flex-row z4sbms _1HO2Le x8mfAd k3cQ11"
          >
            <div
              class=""
              style="min-width: 0; flex-basis: auto;"
            >
              <a
                class="penmb- uui-button-box uui-enabled -clickable uui-link_button tZra-e uui-size-42 uui-no-left-icon uui-has-right-icon uui-color-primary"
                data-testid="step-link-1"
                role="link"
                tabindex="0"
              >
                <div
                  class="uui-caption stepLink"
                >
                  DISCOVER OPEN TENDERS
                </div>
                <div
                  class="_1t9CRQ uui-icon uui-enabled"
                >
                  <svg
                    class=""
                  >
                    navigation-chevron-right-18.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="stepIcon"
              style="min-width: 0; flex-basis: auto;"
            >
              <img
                src="empty.svg"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="uui-panel lNErC1 stepWrapper -YmdJu"
    >
      <div
        class="uui-panel lNErC1 step false offsetEnd -YmdJu"
      >
        <div
          class="uui-flex-row z4sbms _1HO2Le x8mfAd _7a2mcl"
        >
          <div
            class=""
            style="min-width: 0; flex-basis: auto;"
          >
            <div
              class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography b2hPSQ -KuFcE ACLoGo stepNumber VocdbV"
            >
              01
            </div>
            <div
              class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography b2hPSQ -KuFcE ACLoGo stepTitle VocdbV"
            >
              Tenders for art objects are opened
            </div>
          </div>
        </div>
        <div
          class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography -Y5Dym _6GiZro _6Zp8gd stepDescription VocdbV"
        >
          State officials announce open calls for street art tenders, inviting sculptors, artists, and creators to enhance the cityscape with original art installations.
        </div>
        <div
          class="uui-flex-row z4sbms _1HO2Le x8mfAd k3cQ11"
        >
          <div
            class=""
            style="min-width: 0; flex-basis: auto;"
          >
            <a
              class="penmb- uui-button-box uui-enabled -clickable uui-link_button tZra-e uui-size-42 uui-no-left-icon uui-has-right-icon uui-color-primary"
              data-testid="step-link-1"
              role="link"
              tabindex="0"
            >
              <div
                class="uui-caption stepLink"
              >
                DISCOVER OPEN TENDERS
              </div>
              <div
                class="_1t9CRQ uui-icon uui-enabled"
              >
                <svg
                  class=""
                >
                  navigation-chevron-right-18.svg
                </svg>
              </div>
            </a>
          </div>
          <div
            class="stepIcon"
            style="min-width: 0; flex-basis: auto;"
          >
            <img
              src="empty.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Step component renders correctly with offset and icon on top 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="uui-panel lNErC1 stepWrapper -YmdJu"
      >
        <div
          class="uui-panel lNErC1 step offsetStart false -YmdJu"
        >
          <div
            class="uui-flex-row z4sbms _1HO2Le x8mfAd _7a2mcl"
          >
            <div
              class=""
              style="min-width: 0; flex-basis: auto;"
            >
              <div
                class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography b2hPSQ -KuFcE ACLoGo stepNumber VocdbV"
              >
                02
              </div>
              <div
                class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography b2hPSQ -KuFcE ACLoGo stepTitle VocdbV"
              >
                Tenders for art objects are opened
              </div>
            </div>
            <div
              class="stepIcon"
              style="min-width: 0; flex-basis: auto;"
            >
              <img
                src="empty.svg"
              />
            </div>
          </div>
          <div
            class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography -Y5Dym _6GiZro _6Zp8gd stepDescription VocdbV"
          >
            State officials announce open calls for street art tenders, inviting sculptors, artists, and creators to enhance the cityscape with original art installations.
          </div>
          <div
            class="uui-flex-row z4sbms _1HO2Le x8mfAd k3cQ11"
          >
            <div
              class=""
              style="min-width: 0; flex-basis: auto;"
            >
              <a
                class="penmb- uui-button-box uui-enabled -clickable uui-link_button tZra-e uui-size-42 uui-no-left-icon uui-has-right-icon uui-color-primary"
                data-testid="step-link-2"
                role="link"
                tabindex="0"
              >
                <div
                  class="uui-caption stepLink"
                >
                  DISCOVER OPEN TENDERS
                </div>
                <div
                  class="_1t9CRQ uui-icon uui-enabled"
                >
                  <svg
                    class=""
                  >
                    navigation-chevron-right-18.svg
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="uui-panel lNErC1 stepWrapper -YmdJu"
    >
      <div
        class="uui-panel lNErC1 step offsetStart false -YmdJu"
      >
        <div
          class="uui-flex-row z4sbms _1HO2Le x8mfAd _7a2mcl"
        >
          <div
            class=""
            style="min-width: 0; flex-basis: auto;"
          >
            <div
              class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography b2hPSQ -KuFcE ACLoGo stepNumber VocdbV"
            >
              02
            </div>
            <div
              class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography b2hPSQ -KuFcE ACLoGo stepTitle VocdbV"
            >
              Tenders for art objects are opened
            </div>
          </div>
          <div
            class="stepIcon"
            style="min-width: 0; flex-basis: auto;"
          >
            <img
              src="empty.svg"
            />
          </div>
        </div>
        <div
          class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography -Y5Dym _6GiZro _6Zp8gd stepDescription VocdbV"
        >
          State officials announce open calls for street art tenders, inviting sculptors, artists, and creators to enhance the cityscape with original art installations.
        </div>
        <div
          class="uui-flex-row z4sbms _1HO2Le x8mfAd k3cQ11"
        >
          <div
            class=""
            style="min-width: 0; flex-basis: auto;"
          >
            <a
              class="penmb- uui-button-box uui-enabled -clickable uui-link_button tZra-e uui-size-42 uui-no-left-icon uui-has-right-icon uui-color-primary"
              data-testid="step-link-2"
              role="link"
              tabindex="0"
            >
              <div
                class="uui-caption stepLink"
              >
                DISCOVER OPEN TENDERS
              </div>
              <div
                class="_1t9CRQ uui-icon uui-enabled"
              >
                <svg
                  class=""
                >
                  navigation-chevron-right-18.svg
                </svg>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Step component renders correctly without the link 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="uui-panel lNErC1 stepWrapper -YmdJu"
      >
        <div
          class="uui-panel lNErC1 step false offsetEnd -YmdJu"
        >
          <div
            class="uui-flex-row z4sbms _1HO2Le x8mfAd _7a2mcl"
          >
            <div
              class=""
              style="min-width: 0; flex-basis: auto;"
            >
              <div
                class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography b2hPSQ -KuFcE ACLoGo stepNumber VocdbV"
              >
                01
              </div>
              <div
                class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography b2hPSQ -KuFcE ACLoGo stepTitle VocdbV"
              >
                Tenders for art objects are opened
              </div>
            </div>
          </div>
          <div
            class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography -Y5Dym _6GiZro _6Zp8gd stepDescription VocdbV"
          >
            State officials announce open calls for street art tenders, inviting sculptors, artists, and creators to enhance the cityscape with original art installations.
          </div>
          <div
            class="uui-flex-row z4sbms _1HO2Le x8mfAd k3cQ11"
          >
            <div
              class="stepIcon"
              style="min-width: 0; flex-basis: auto;"
            >
              <img
                src="empty.svg"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="uui-panel lNErC1 stepWrapper -YmdJu"
    >
      <div
        class="uui-panel lNErC1 step false offsetEnd -YmdJu"
      >
        <div
          class="uui-flex-row z4sbms _1HO2Le x8mfAd _7a2mcl"
        >
          <div
            class=""
            style="min-width: 0; flex-basis: auto;"
          >
            <div
              class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography b2hPSQ -KuFcE ACLoGo stepNumber VocdbV"
            >
              01
            </div>
            <div
              class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography b2hPSQ -KuFcE ACLoGo stepTitle VocdbV"
            >
              Tenders for art objects are opened
            </div>
          </div>
        </div>
        <div
          class="DItj1X uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography -Y5Dym _6GiZro _6Zp8gd stepDescription VocdbV"
        >
          State officials announce open calls for street art tenders, inviting sculptors, artists, and creators to enhance the cityscape with original art installations.
        </div>
        <div
          class="uui-flex-row z4sbms _1HO2Le x8mfAd k3cQ11"
        >
          <div
            class="stepIcon"
            style="min-width: 0; flex-basis: auto;"
          >
            <img
              src="empty.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
